#42 Fix long urls break on FAQ

--- a/www/media/com_volunteers/css/frontend.css
+++ b/www/media/com_volunteers/css/frontend.css
@@ -100,7 +100,8 @@
 	margin-top: 0;
 }
 
-.report p {
+.report p,
+.item-page p {
 	word-wrap: break-word;
 }
 
